--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+html, body{
+    background-image: url("assets/imgs/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
+}
