--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,17 @@
+*{
+    font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+}
+
 html, body{
-    background-image: url("assets/imgs/bg.png");
+    background-image: url("assets/imgs/w11-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100%;
+    margin: 0; 
+    height: 100%; 
+    overflow: hidden;
+}
+
+img{
+    border-radius: 5px;
 }
