--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,59 @@
+
 footer{
     position:fixed;
     left:0px;
     bottom:0px;
     height:50px;
     width:100%;
-    background:#999;
+    background-color: rgba(9, 20, 38, 0.9);
+    box-shadow: inset 0 12px 10px -15px rgba(255, 255, 255, 0.8);
+}
+
+.center{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 7px;
+}
+
+button:hover {
+    background-color: rgba(91, 95, 102, .4);
+    border-radius: 5px;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+}
+
+
+img{
+    padding: 4px;
+    width: 25px;
+}
+
+.time{
+    padding-top: 5px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    right: 0;
+    margin-top: 7px;
+    color: white;
+    padding-right: 10px;
+    font-size: 12px;
+}
+
+.inline{
+    justify-content: center;
+    display: inline-flex;
+}
+
+.icon{
+    width: 20px;
+}
+
+.folder-icon{
+    width: 30px;
 }
