--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,34 @@
-<footer>
-    Footer
+<footer class="inline">
+    <div class="inline">
+        <div class="center inline">
+
+            <button>
+                <img [src]="windows"/><br/>
+            </button>
+
+            <button>
+                <img [src]="cmd"/><br/>
+            </button>
+
+            <button>
+                <img class="folder-icon" [src]="folder"/><br/>
+            </button>
+
+            <button>
+                <img class="icon" [src]="notepad"/><br/>
+            </button>
+
+        </div>
+    </div>
+    <!--<div class="center inline">
+        <button>
+            <img [src]="windows"/><br/>
+        </button>
+    </div>-->
+
+    <div class="time">
+        {{time}}<br/>
+        {{date}}
+    </div>
+
 </footer>
