--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,42 +2,26 @@
 
 <div class="grid-container">
 
-    <button (window:keypress)="projectsEnter($event)"></button>
+    <!--<button class="hiddenBtn" type="hidden" (window:keypress)="projectsEnter($event)"></button>-->
 
-
-    <div class="grid-cmd" >
-        <div cdkDrag>
-            <img class="cmd" [src]="cmd" /> 
+    <div class="grid-cmd" id="grid-cmd">
+        <div id="cmd" cdkDrag (cdkDragStarted)="cmdDrag()">
+            <app-cmd></app-cmd>
         </div>
     </div>
 
-    <div class="grid-folder">
-        <div class="container" cdkDrag>
-            <img class="folder" [src]="folder" /> 
-            <div class="folder-btn">
-                <button class="square-button">
-                    <img class="small-img" [src]="folderWork"/><br/>
-                    <span class="button-text">Professional Experience</span>
-                </button>
-                <button class="square-button">
-                    <img class="small-img" [src]="folderEducation"/><br/>
-                    <span class="button-text">Education</span>
-                </button>
-            </div>
+    <div class="grid-folder" id="grid-folder">
+        <div id="folder" cdkDrag (cdkDragStarted)="folderDrag()">
+            <app-folder></app-folder>
         </div>
     </div>  
 
-    <div class="grid-notepad">
-        <div class="container" cdkDrag>
-            <img class="notepad" [src]="notepad" /> 
-            <div class="notepad-txt">
-                <p>- Fábio Gonçalves</p>
-                <p>- 11/04/1998</p>
-                <p>- Computer Science</p>
-            </div>
+    <div class="grid-notepad" id="grid-notepad">
+        <div id="notepad" cdkDrag (cdkDragStarted)="notepadDrag()">
+            <app-notepad></app-notepad>
         </div>
     </div>
 
-  </div>
+</div>
 
  
