--- a/src/app/folder/folder.component.html
+++ b/src/app/folder/folder.component.html
@@ -1,45 +1,22 @@
-<!--<div cdkDrag>
-    <img class="folder" [src]="folder" /> 
-    <div class="folder-btn">
-        <button class="square-button">
-            <img class="small-img" [src]="folderWork"/><br/>
-            <span class="button-text">Professional Experience</span>
-        </button>
-        <button class="square-button">
-            <img class="small-img" [src]="folderEducation"/><br/>
-            <span class="button-text">Education</span>
-        </button>
-    </div>
-</div>-->
-
-<!--<div cdkDrag>
-    <img class="folder" [src]="folder" /> 
-    <div class="folder-btn">
-        <button class="square-button">
-            <img class="small-img" [src]="folderWork"/><br/>
-            <span class="button-text">Professional Experience</span>
-        </button>
-        <button class="square-button">
-            <img class="small-img" [src]="folderEducation"/><br/>
-            <span class="button-text">Education</span>
-        </button>
-    </div>
-</div>-->
 
 <div class="container">
     <img class="folder" [src]="folder" /> 
+    <div class="closeBtn">
+        <button class="btnClose" (click)="this._home.close('folder')">X</button>
+      </div>
     <button class="square-button btn1">
         <img class="small-img" [src]="folderWork"/><br/>
-        <span class="button-text">Professional Experience</span>
+        <span>Professional Experience</span>
     </button>
     <button class="square-button btn2"> 
         <img class="small-img" [src]="folderEducation"/><br/>
-        <span class="button-text">Education</span>
+        <span>Education</span>
     </button>
-    <a href="../../assets/files/FabioGoncalves_CV_en.pdf" target="_blank">
+    <!--<a href="../../assets/files/FabioGoncalves_CV_en.pdf" target="_blank">-->
+        <a href="https://fabiomtgoncalves.github.io/portfolio-old/files/FabioGoncalves_CV_en.pdf" target="_blank">
         <button class="square-button btn3">
             <img class="pdf-img" [src]="pdf"/><br/>
-            <span class="button-text">CV</span>
+            <span>CV</span>
         </button>
     </a>
 </div>
