--- a/src/app/cmd/cmd.component.css
+++ b/src/app/cmd/cmd.component.css
@@ -1,4 +1,76 @@
-div{
-  background-color: red;
-  width: 0;
+.container {
+    position: relative;
 }
+
+.cmd-text{
+    position: absolute;
+    top: 10%;
+    padding-left: 2%;
+    color: white;
+    width: 100%;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    color: red;
+}
+
+.success{
+    color: green;
+}
+
+.inline{
+    display: inline;
+}
+
+input{
+    border: none;
+    color: white;
+    background-color: transparent;
+    width: 70%;
+}
+
+input:focus, input:active, input:hover{
+    outline: none !important;
+    border: none;
+    box-shadow: none;
+}
+
+.closeBtn{
+    font-size: 13px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: white;
+    text-align: center;
+    background-color: transparent;
+}
+
+
+button{
+    padding-top: 2px;
+    width: 43.5px;
+    height: 37px;
+    background-color: #2e2e2e;
+    border: none;
+    color: white;
+    font-family: Arial, sans-serif;
+    border-radius: 0 5px 0 0;
+}
+
+
+button:hover{
+    background-color: #c42b1c;
+}
+
+.cmdMessage{
+    font-size: 12px;
+    color: #c42b1c;
+}
+
+
+
