--- a/src/app/folder/folder.component.css
+++ b/src/app/folder/folder.component.css
@@ -1,5 +1,4 @@
 
-
 button:hover {
     background-color: rgba(91, 95, 102, .4);
     border-radius: 5px;
@@ -16,8 +15,6 @@ button:hover {
 
 .container {
     position: relative;
-    width: 100%;
-    max-width: 400px;
 }
   
   
@@ -34,18 +31,45 @@ button:hover {
 }
 
 .btn1{
-    left: 40%;
+    left: 18%;
 }
 
 .btn2{
-    left: 65%;
+    left: 30%;
 }
 
 .btn3{
-    left: 90%;
+    left: 41%;
 
 }
 
 .btns-align{
     display: inline;
+}
+
+.closeBtn{
+    font-size: 13px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: white;
+    text-align: center;
+    background-color: transparent;
+}
+
+
+.btnClose{
+    width: 43.5px;
+    height:30px;
+    background-color: #000e12;
+    border: none;
+    color: white;
+    font-family: Arial, sans-serif;
+    border-radius: 0 5px 0 0;
+}
+
+
+.btnClose:hover{
+    background-color: #c42b1c;
+    border-radius: 0 5px 0 0;
 }
