--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,33 +1,18 @@
-
-
-
-img{
-    border-radius: 5px;
+div{
+    width: fit-content;
+    height: fit-content;
 }
 
 
 .container {
     position: relative;
-    text-align: center;
-    color: white;
-}
-
-.notepad-txt {
-    position: absolute;
-    top: 0;
-    padding-top: 12%;
-    padding-left: 7%;
-    bottom: 0;
-    font-size: 17px;
+    width: 100%;
+    height: 100%;
 }
 
 
-.hiddenBtn{
-    display: none;
-}
-
-.folderWork{
-    width: 30px;
+.cima{
+    z-index: 100;
 }
 
 img{
@@ -35,24 +20,62 @@ img{
 }
 
 
-.grid-notepad { grid-area: notepad; }
-.grid-cmd { grid-area: cmd; }
-.grid-folder { grid-area: folder; }
+.grid-notepad { grid-area: notepad; width: fit-content;}
+.grid-cmd { grid-area: cmd; width: fit-content;}
+.grid-folder { grid-area: folder; width: fit-content;}
 
 .grid-container {
     display: grid;
     grid-template-areas:
       'cmd cmd cmd cmd cmd notepad'
       'folder folder folder folder folder notepad';
-    gap: 10px;
+    grid-gap: 10px;
     padding-top: 40px;
-    padding-left: 300px;
-    padding-right: 400px;
+    padding-left: 150px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
   }
   
-.grid-container > div {
+
+.square-button{
+    left: 1%;
+    position: absolute;
+    background-color: #555;
+    background-color: transparent;
+    border: none;
+    width: 100px;
+    color: white;
+    border-radius: 5px;
     text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
 }
 
+button:hover {
+    background-color: rgba(91, 95, 102, .4);
+    border-radius: 5px;
+}
+
+.small-img {
+    max-width: 80px;
+}
+
+.recycle{
+    top: 5%;
+}
+
+.cmd{
+    top: 30%;
+}
+
+.notepad{
+    top: 50%;
+}
+
+.notepad-icon{
+    width: 50px;
+}
+
+.folder{
+    top: 67%;
+}
