--- a/src/app/notepad/notepad.component.css
+++ b/src/app/notepad/notepad.component.css
@@ -4,8 +4,7 @@
 
 .container {
     position: relative;
-    width: 100%;
-    max-width: 400px;
+
 }
   
   
@@ -38,10 +37,36 @@ textarea:focus, textarea:active, textarea:hover{
     margin: auto;
     font-size: 13px;
     position: absolute;
-    bottom: 0.6%;
-    left: 24%;
+    bottom: 0%;
+    left: 19%;
     color: #c4c6c6;
     text-align: center;
+}
+
+.closeBtn{
+    font-size: 13px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: white;
+    text-align: center;
+    background-color: transparent;
+}
+
+
+button{
+    width: 43.5px;
+    height:30px;
+    background-color: #000e12;
+    border: none;
+    color: white;
+    font-family: Arial, sans-serif;
+    border-radius: 0 5px 0 0;
+}
+
+
+button:hover{
+    background-color: #c42b1c;
 }
 
 p{
