icon click animations -> window focus, recycle bin fixed, new cv url test

--- a/src/app/cmd/cmd.component.html
+++ b/src/app/cmd/cmd.component.html
@@ -8,7 +8,7 @@
     <h1>Projects</h1>
     <a href="https://github.com/FabiomtGoncalves/GameGuess" target="_blank">> <b>GameGuess</b> [Game: Guess the video game title]</a> <br/>
     <a href="https://github.com/FabiomtGoncalves/ESTIGaming" target="_blank">> <b>ESTIGaming</b> [Digital videogame key's store]</a> <br/>
-    <a href="https://github.com/FabiomtGoncalves/Angular-SpringBoot" target="_blank">> Simple Full Stack APP [ w/ Angular & SpringBoot]</a> <br/><br/>
+    <a href="https://fabiomtgoncalves.github.io/portfolio-old/files/IPB_Recicla_17646_21932.pdf" target="_blank">> <b>IPB Recicla</b> [Android app to incentivise recycling]</a> <br/><br/>
     <a href="https://github.com/FabiomtGoncalves" target="_blank">> More projects on my Github</a> 
 
     <p class="success">Projects loaded with success . . .</p>
