--- a/src/app/folder/folder.component.html
+++ b/src/app/folder/folder.component.html
@@ -13,10 +13,10 @@
         <span>Education</span>
     </button>
     <!--<a href="../../assets/files/FabioGoncalves_CV_en.pdf" target="_blank">-->
-        <a href="https://fabiomtgoncalves.github.io/portfolio-old/files/FabioGoncalves_CV_en.pdf" target="_blank">
-        <button class="square-button btn3">
+        <!--<a href="https://fabiomtgoncalves.github.io/portfolio-old/files/FabioGoncalves_CV_en.pdf" target="_blank">-->
+        <button class="square-button btn3" (click)="openCV()">
             <img class="pdf-img" [src]="pdf"/><br/>
             <span>CV</span>
         </button>
-    </a>
+    <!--</a>-->
 </div>
