--- a/src/app/cmd/cmd.component.html
+++ b/src/app/cmd/cmd.component.html
@@ -4,6 +4,7 @@
     <button class="close-btn" (click)="this._home.close('cmd')">X</button>
   </div>
   <div class="cmd-text">
+
     <p>C:\Users\Fábio> show projects</p>
     <h1>Projects</h1>
     <a href="https://github.com/FabiomtGoncalves/GameGuess" target="_blank">> <b>GameGuess</b> [Game: Guess the video game title]</a> <br/>
@@ -12,16 +13,17 @@
     <a href="https://github.com/FabiomtGoncalves" target="_blank">> More projects on my Github</a> 
 
     <p class="success">Projects loaded with success . . .</p>
-
+    
     <div class="inline">
       <p class="inline">C:\Users\Fábio> </p>
       <form class="inline" (submit)="cmdInput()">
-        <input [(ngModel)]="command" type="text" name="cmd-input" id="cmd-input" autocomplete="off" autofocus>
+        <input [(ngModel)]="command" type="text" name="cmd-input" id="cmd-input" autocomplete="off" autofocus oninput="this.value = this.value.toLowerCase()">
       </form>
       
     </div>
     
-    <p class="cmdMessage">{{cmdMessage}}</p>
+    <p id="cmdMessage" class="cmdMessage">{{cmdMessage}}</p>
+
 
   </div>
 </div>
