--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="inline">
+<!--<footer class="inline">
     <div class="inline">
         <div class="center inline">
 
@@ -20,15 +20,15 @@
 
         </div>
     </div>
-    <!--<div class="center inline">
+    <div class="center inline">
         <button>
             <img [src]="windows"/><br/>
         </button>
-    </div>-->
+    </div>
 
     <div class="time">
         {{time}}<br/>
         {{date}}
     </div>
 
-</footer>
+</footer>-->
