--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -25,6 +25,7 @@ button:hover {
 button {
     background-color: transparent;
     border: none;
+    transition: all 0.3s ease 0s;
 }
 
 
@@ -60,3 +61,18 @@ img{
 }
 
 
+button:active {
+    background-color: grey;
+    transform: scaleY(5px);
+}
+
+button:hover:enabled {
+    box-shadow: 0px 15px 20px transparent;
+    color: #fff;
+    transform: translateY(-7px);
+}
+  
+img:active{
+    width: 15px;
+    height: 15px;
+}
