--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -80,3 +80,101 @@ button:hover {
     top: 5%;
 }
 
+
+
+footer{
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:50px;
+    width:100%;
+    background-color: rgba(9, 20, 38, 0.9);
+    box-shadow: inset 0 12px 10px -15px rgba(255, 255, 255, 0.8);
+    z-index: 100;
+}
+
+.center{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 7px;
+}
+
+.footer-button:hover {
+    background-color: rgba(91, 95, 102, .4);
+    border-radius: 5px;
+}
+
+.footer-button {
+    background-color: transparent;
+    border: none;
+    transition: all 0.3s ease 0s;
+}
+
+
+.footer-img{
+    padding: 4px;
+    width: 25px;
+}
+
+.time{
+    padding-top: 5px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    right: 0;
+    margin-top: 7px;
+    color: white;
+    padding-right: 10px;
+    font-size: 12px;
+}
+
+.inline{
+    justify-content: center;
+    display: inline-flex;
+}
+
+.icon{
+    width: 20px;
+}
+
+.folder-icon{
+    width: 30px;
+}
+
+
+button:active {
+    background-color: grey;
+    transform: scaleY(5px);
+}
+
+.footer-button:active {
+    background-color: grey;
+    transform: scaleY(5px);
+}
+
+.footer-button:hover:enabled {
+    box-shadow: 0px 15px 20px transparent;
+    color: #fff;
+    transform: translateY(-7px);
+}
+  
+img:active{
+    width: 15px;
+    height: 15px;
+}
+
+.wordEducation{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+    z-index: 100;
+}
+
+.indexTest{
+    z-index: 100;
+}
