--- a/src/app/word/word.component.css
+++ b/src/app/word/word.component.css
@@ -64,17 +64,54 @@ button:hover {
 
 
 .btnClose{
-    width: 43.5px;
+    width: 42px;
     height:30px;
-    background-color: #000e12;
+    background-color: #ffffff;
     border: none;
-    color: white;
+    color: black;
     font-family: Arial, sans-serif;
     border-radius: 0 5px 0 0;
 }
 
 
 .btnClose:hover{
+    color: white;
     background-color: #c42b1c;
     border-radius: 0 5px 0 0;
+}
+
+.center-doc{
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    height: 78%;
+    background-color: transparent;
+    color: black;
+    text-align: center;
+}
+
+.estig{
+    width: 20%;
+}
+
+hr{
+    width: 70%;
+}
+
+.pad{
+    padding: 0;
+}
+
+.school{
+    font-size: 13px
+}
+
+span{
+    font-size: 12px;
+    color: grey;
+}
+
+.example-viewport {
+    height: 92%;
+    width: 100%;
 }
