word experience, z-index bug fix (word's) -> removed click from folder component, footer windows icon click to F5

--- a/src/app/folder/folder.component.html
+++ b/src/app/folder/folder.component.html
@@ -4,7 +4,7 @@
     <div class="closeBtn">
         <button class="btnClose" (click)="this._home.close('folder')">X</button>
       </div>
-    <button class="square-button btn1">
+    <button class="square-button btn1" (click)="this._home.open('wordExperience')">
         <img class="doc-img" [src]="word"/><br/>
         <span>Professional Experience</span>
     </button>
