--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -172,9 +172,13 @@ img:active{
     right:0;
     bottom:0;
     margin:auto;
-    z-index: 100;
 }
 
-.indexTest{
-    z-index: 100;
+.wordExperience{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
 }
