--- a/src/app/word/word.component.html
+++ b/src/app/word/word.component.html
@@ -5,6 +5,8 @@
         <button class="btnClose" (click)="this._home.close('wordEducation')">X</button>
     </div>
     
+    <!--<div class="disabled"></div>-->
+
     <div class="center-doc">
         <cdk-virtual-scroll-viewport id="commands" itemSize="99999" class="example-viewport">
             <h1>Education</h1> <br/>
