--- a/src/app/recycle-bin/recycle-bin.component.css
+++ b/src/app/recycle-bin/recycle-bin.component.css
@@ -24,8 +24,6 @@ button:hover {
   
   
 .square-button{
-    position: absolute;
-    top: 30%;
     background-color: #555;
     background-color: transparent;
     border: none;
@@ -64,63 +62,41 @@ button:hover {
 
 
 .btnClose{
-    width: 42px;
+    width: 43.5px;
     height:30px;
-    background-color: #ffffff;
+    background-color: #000e12;
     border: none;
-    color: black;
+    color: white;
     font-family: Arial, sans-serif;
     border-radius: 0 5px 0 0;
 }
 
 
 .btnClose:hover{
-    color: white;
     background-color: #c42b1c;
     border-radius: 0 5px 0 0;
 }
 
-.center-doc{
+.notepad{
+    max-width: 45px;
+    padding: 7px;
+}
+
+.bin-txt{
+    color: white;
+}
+
+.txt-empty{
+    font-size: 15px;
     position: absolute;
-    top: 25%;
-    width: 100%;
-    height: 78%;
-    background-color: transparent;
-    color: black;
+    top: 32%;
+    left: 48%;
+    color: white;
     text-align: center;
 }
 
-.estig{
-    width: 20%;
-}
-
-hr{
-    width: 70%;
-}
-
-.pad{
-    padding: 0;
-}
-
-.school{
-    font-size: 13px
-}
-
-span{
-    font-size: 12px;
-    color: grey;
-}
-
-.example-viewport {
-    height: 92%;
-    width: 100%;
-}
-
-.disabled{
-    right: 0;
-    top: 4.2%;
+.btns{
     position: absolute;
-    width: 100%;
-    height: 17%;
-    background-color: rgba(128,128,128,0.8);
+    top: 32%;
+    left: 19%;
 }
